journey card and alignment issues are fixed

--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -59,3 +59,45 @@
   text-decoration: none;
 }
 
+.banner {
+  background-size: cover;
+  background-position: center;
+  padding: 150px 0;
+  height: 400px;
+  overflow: hidden;
+}
+
+.banner h1 {
+  margin: 0;
+  color: white;
+  text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
+  font-size: 40px;
+  font-weight: bold;
+  text-align: center;
+}
+
+.tabcontent h2 {
+  margin: 0;
+  color: white;
+  text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
+  font-weight: bold;
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.banner p {
+  font-size: 24px;
+  color: white;
+  opacity: .9;
+  text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
+  text-align: center;
+}
+
+.banner a {
+  display: flex;
+  width: 50%;
+  background-color: white;
+  color: black;
+  opacity: 50%;
+  justify-content: center;
+}
