--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -18,8 +18,7 @@
   border-radius: 40px;
   background: $gray;
   transition: background 0.3s ease;
-  left: 50%;
-  right: 50%;
+  width: 200px;
 }
 
 .btn-flat:hover {
