--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,8 +1,6 @@
 .navbar-lewagon {
-  background: white;
-  text-align: center;
-  position: relative;
   justify-content: space-between;
+  background: white;
 }
 
 .navbar-lewagon .navbar-collapse {
@@ -25,9 +23,7 @@
 .container-search {
   display: flex;
   flex-direction: column;
-  position: absolute;
-  margin: 0px;
-  left: 45.2%;
+  align-items: center;
 }
 
 .search-input> label, .search-input>input  {
